--- a/index.html
+++ b/index.html
@@ -6,71 +6,67 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
-  <link rel="stylesheet" href="style.css">
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <!--the website icon-->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lexend Deca">
-  <!--external link for google fonts -->
+  <link rel="stylesheet" href="style.css">
+  <!--style css-->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans">
+  <!--external google font -->
 
-  <title>Frontend Mentor | Stats preview card component</title>
-  </title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!--external social media icons-->
+
+  <title>Frontend Mentor | Huddle landing page with single introductory section</title>
+
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+
 </head>
 
 <body>
+
   <main class="container">
-    <!--the main container -->
-    <div class="statistics">
-      <!--the div holds all the content together-->
-      <div class="statistics__image">
-        <!--the div that holds the image content-->
-        <source media="(max-width:375px)" srcset="images/image-header-desktop.jpg" class="mobile">
-        <img src="images/image-header-mobile.jpg" alt="" class="laptop">
-        <!--the image in the div-->
-        </picture>
-      </div>
-      <div class="statistics__information">
-        <!--the div that holds the text content-->
-        <div class="statistics__information__head">
-          <!--the div that holds the head text -->
-          <h1>Get <span class="insights">insights</span> that help your business grow.</h1>
-          <!--the h1 text  in the div-->
-        </div>
-        <div class="statistics__information__discovery">
-          <!--the div that holds the discovery texts-->
-          <p>Discover the benefits of data analytics and make
-            better decisions regarding revenue, customer
-            experience, and overall efficiency.
-          </p>
-          <!--the discovery text in the div-->
-        </div>
-        <div class="statistics__information__footer">
-          <!--the div that holds footer contents-->
-          <div class="statistics__information__footer__for__company">
-            <!--the div that holds that holds the company info texts-->
-            <h2>10k<span class="plus__sign">+</span></h2>
-            <p>companies</p>
-            <!--the info texts in the div-->
-          </div>
-          <div class="statistics__information__footer__for__templates">
-            <!--the div that holds the templates info texts-->
-            <h2>314</h2>
-            <p>templates</p>
-            <!--the info texts in the div-->
-          </div>
-          <div class="statistics__information__footer__for__queries">
-            <!--the div that holds the queriy info text-->
-            <h2>12m<span class="plus__sign">+</span></h2>
-            <p>queries</p>
-            <!--the info texts in the div-->
-          </div>
-        </div>
-      </div>
-    </div>
-    </div>
+    <div class="huddle"> <!--huddle-->
+      <img src="./images/logo.svg" alt="" class="logo">
+
+      <div class="huddle__main"> <!--huddle__main-->
+        <div class="huddle__main__picture">
+          <!-- <img src="./images/illustration-mockups.svg" alt="" class="illustration-img"> -->
+        </div><!--end of huddle__main__picture-->
+
+        <div class="huddle__main__info"><!--huddle__main__info-->
+          <h1 class="build__community">Build The Community Your Fans Will Love</h1>
+          <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+            Create connections with your users as you engage in genuine discussion.</p>
+
+          <a href="#" class="register">Register</a>
+        </div><!--end of huddle__main__info-->
+
+      </div><!--end of huddle__main-->
+
+      <div class="huddle__footer"> <!--huddle__footer-->
+        <!--the logos-->
+        <i class="fa-brands fa-facebook-f"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-instagram"></i>
+      </div><!--end of huddle__footer-->
+
+    </div><!--end of huddle-->
   </main>
 
+
+
+
+
+
+
+  <!-- <footer>
+    <p class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Your Name Here</a>.
+    </p>
+  </footer> -->
 </body>
 
 </html>
